# casdk-harness

./: .env.example  .env.mcp.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: .mcp.json  CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: build-context-agent.md  build-orchestrator.md  code-review-expert.md  data-python-data-engineer.md  database-expert.md  db-mariadb-expert.md  db-postgres-expert.md  db-sql-expert.md  db-vector-expert.md  dev-cpp-expert.md  dev-go-expert.md  dev-javascript-expert.md  dev-nodejs-expert.md  dev-php-expert.md  dev-python-expert.md  dev-react-expert.md  dev-refactor-agent.md  dev-typescript-expert.md  doc-content-writer.md  gcp-architect.md  infra-aws-architect.md  infra-docker-engineer.md  infra-gcp-architect.md  infra-gitlab-ci-expert.md  infra-k8s-engineer.md  infra-terraform-engineer.md  ml-tensorflow-expert.md  prd-writer.md  project-planner.md  sdet-expert.md  web-fastapi-architect.md  web-frontend-designer.md  web-nextjs-specialist.md
.claude/hooks/: hooks.json  log_agent_actions.py
.claude/patterns/: caching-strategies.md  database-patterns.md  error-handling-patterns.md  event-driven-architecture.md
.claude/skills/: api-development.md  code-review-techniques.md  database-management.md  deployment-operations.md
.claude/templates/: fastapi-starter.md  github-actions-ci.md  react-typescript-app.md
.claude/workflows/: code-review-pipeline.md  security-hardening.md  testing-qa-orchestration.md
.ssh/: README.md  config  netrc.example
agents/main/: Dockerfile
config/monitoring/: CLAUDE.md  alerting.yml  alertmanager.yml  alertmanager_webhook_debug.py  otel-collector.yml  prometheus.yml
docs/: AGENT_ARCH.md  AGENT_NOTES.md  CGF-API-REFERENCE.md  CGF-EVAL-FRAMEWORK.md  CGF-EVAL-ROADMAP.md  CGF-EXAMPLES.md  CGF-RUN-REPORT.md  CGF-USER-GUIDE.md  CONTAINERIZATION.md  CONTEXT.md  CONTEXT_MANAGEMENT.md  EVAL-RESEARCH-2026-06.md  GRAFANA-REFACTOR.md  HARDENING.md  IMPLEMENTATION.md  LOST_CHANGES.md  METRICS-INVENTORY.md  MODE2_OVERVIEW.md  MODE2_PHASE_1A_REPOSITORY_SUPPORT.md  MODE2_PHASE_2A_FOUNDATION.md  OBSERVABILITY.md  ORCHESTRATION.md  ORCHESTRATION_ARCHITECTURE.md  ORCHESTRATION_PATTERNS.md  ORCHESTRATION_ROADMAP.md  PHASEA_REFINEMENT_PLAN.md  PHASEA_SUMMARY.md  REFACTOR.md  REFERENCES.md  SDK_FIx.md  SPEC.example.md  x_DEFERRED_FEATURES.md
docs/agentic-orch/: CLAUDE_AGENT_SDK_ORCHESTRATION_ARCHITECTURE.md  IMPLEMENTATION_PLANS.md  paradigms_remaining.md  top_5_orchestration_paradigms.md
docs/archived notes/: AGENT_NOTES.md  BEST_PRACTICES.md  MODE1_OVERVIEW.md  TROUBLESHOOTING.md
docs/attic/: CONTAINERIZATION.md
docs/examples/: CGF_MULTI_RESOURCE_SPEC.example.md  CGF_SPEC.example.md  MULTI_RESOURCE_SPEC.example.md  README.md
docs/features/: AGENTIC_EXAMPLES.md  CGF-AGENTIC-ROADMAP.md  CGF-API-REFERENCE.md  CGF-EXAMPLES.md  CGF-INFRASTRUCTURE.md  CGF-USER-GUIDE.md  CONTAINERIZATION.md  CONTEXT-GRAD-IMP.md  CONTEXT-GRAD-SPEC.md  CONTEXT-InProgress.md  CONTEXT_ENG_WF.md  UI.md
docs/future/: FUTURE.md  LOW_PRIO_FEATURES.md  MODE1_PHASE2_UI.md  MODE2.md  MODE2_PHASE_2B_ORCHESTRATION.md  MODE2_PHASE_2C_EXECUTION.md  MODE2_PHASE_2D_OBSERVABILITY.md  external-repository-support.md
docs/plans/: 2026-03-02-cgf-eval-framework-design.md  2026-03-02-stage1-protocol-layer-resource-architect.md  2026-03-02-stage2-mcp-creation-skills.md  2026-03-02-stage3-evaluation-framework.md  2026-03-02-stage4-integration-hardening.md
docs/sdk-upstream-issues/: 5a-plugin-agent-namespacing.md  5b-plugin-slash-commands.md  DERISK-RESULTS.md  README.md
examples/: README.md  interactive_basic.py  simple_query.py
scripts/: derisk_eval_design.py  derisk_plugin_loading.py  derisk_slash_init.py  synthesize_marketplace_manifests.py
src/harness/: CLAUDE.md  __init__.py  agent.py  agent_progress.py  autonomous.py  cgf_session.py  checkpoint.py  cli.py  commands.py  config.py  direct_agent.py  health.py  hooks.py  interactive.py  mcp_loader.py  messaging.py  monitoring.py  plugin_manager.py  progress.py  security.py  subagent.py
src/harness/plugins/context-engineering/templates/mcp-server-python-template/: README.md  pyproject.toml
src/harness/plugins/context-engineering/templates/mcp-server-python-template/src/server_name/: __init__.py  server.py
src/harness/plugins/context-engineering/templates/mcp-server-python-template/src/server_name/tools/: example.py
src/harness/plugins/context-engineering/templates/mcp-server-python-template/tests/: conftest.py  test_tools.py
src/mcp_servers/: __init__.py
tests/: CLAUDE.md  TODO.md  conftest.py  test_nested_agent.py  test_plugin_discovery.py  test_plugin_discovery_simple.py
tests/e2e/: __init__.py  test_simple_feature.py
tests/integration/: __init__.py  test_agent_sdk_direct.py  test_cgf_pipeline.py  test_cli_binary.py  test_container_buffering.py  test_conversation_memory.py  test_design_phase_integration.py  test_full_pipeline_integration.py  test_harness_plugin_agents.py  test_mcp_docker.py  test_mcp_git.py  test_mcp_tier1_tier2_loading.py  test_multi_agent.py  test_no_sdk_autodiscovery.py  test_plugin_agents.py  test_plugin_cli_args.py  test_plugin_direct_cli.py  test_plugin_discovery.py  test_plugin_loading.py  test_run_report_integration.py  test_sdk_initialization.py  test_sdk_plugin_awareness.py  test_sdk_query_patterns.py  test_signal_handling.py  test_skills.py
tests/optimization/: python_expert_tests.yaml
tests/smoke/: NEXT_STEPS.md  README.md
tests/unit/: test_agent_conversation.py  test_agent_definitions.py  test_agent_init.py  test_agent_progress.py  test_autonomous.py  test_cgf_session.py  test_checkpoint.py  test_cli.py  test_commands.py  test_config.py  test_direct_agent.py  test_health.py  test_hooks.py  test_mcp_context7.py  test_mcp_github.py  test_mcp_gitlab.py  test_mcp_loader.py  test_mcp_memory.py  test_messaging.py  test_monitoring.py  test_multi_resource_orchestrator.py  test_plugin_agent_loading.py  (+7 more)
(+416 files in other folders)
